firewall_rules

*nat
:PREROUTING ACCEPT [714:61461]
:INPUT ACCEPT [334:35580]
:OUTPUT ACCEPT [398:26929]
:POSTROUTING ACCEPT [40:2368]
-A PREROUTING -i public -p tcp -m tcp --dport 64738 -j DNAT --to-destination 10.0.0.5:64738
-A PREROUTING -i public -p udp -m udp --dport 64738 -j DNAT --to-destination 10.0.0.5:64738
-A POSTROUTING -o public -j MASQUERADE
COMMIT

*filter
:INPUT DROP [6:1136]
:FORWARD DROP [0:0]
:OUTPUT ACCEPT [621:53041]
-A INPUT -i private -j ACCEPT
-A INPUT -i lo -j ACCEPT
-A INPUT -p udp -m udp --sport 53 -m state --state ESTABLISHED -j ACCEPT
-A INPUT -p tcp -m tcp --sport 53 -m state --state ESTABLISHED -j ACCEPT
-A FORWARD -m state --state RELATED,ESTABLISHED -j ACCEPT
-A FORWARD -d 10.0.0.5/32 -p tcp -m tcp --dport 64738 -m state --state NEW,RELATED,ESTABLISHED -j ACCEPT
-A FORWARD -d 10.0.0.5/32 -p udp -m udp --dport 64738 -m state --state NEW,RELATED,ESTABLISHED -j ACCEPT
-A FORWARD -i private -j ACCEPT
-A FORWARD -j LOG
-A OUTPUT -p udp -m udp --dport 53 -m state --state NEW,ESTABLISHED -j ACCEPT
-A OUTPUT -p tcp -m tcp --dport 53 -m state --state NEW,ESTABLISHED -j ACCEPT
COMMIT
